cambios en home

--- a/home.html
+++ b/home.html
@@ -44,6 +44,11 @@
                     <p>La miel no solo es deliciosa, sino que también tiene propiedades medicinales. Desde tiempos antiguos, se ha utilizado para tratar heridas y enfermedades.</p>
                     <p>Bueno muy cornudo todo esto pero nada tu amor es asi como la miel para mi, (seguro lees esto y te reis de lo cornuda pero weno jaja)</p>
                     <p>Antes se mandaban cartas en papel y ahora te la mando asi. La verdad no soy muy buena para esto y se que sabes todo lo que siento por vos. Mas alla de las palabras vale lo que somos como personas y valoro mucho lo que sos y cada detalle que tenes hacia mi, por hacerme sentir comoda y amada siempre </p>
+                    <p>Y como dijo Séneca "La mayor rémora de la vida es la espera del mañana y la pérdida del día de hoy", "Sufrimos más a menudo en la imaginación que en la realidad". 
+                        Bueno en realidad no sabia esta frase pero al leerla me di cuenta que nuestra historia comenzó asi (o al menos de mi parte), 
+                        estabamos angustiado por el mañana y con miedos de como llevar la relación, y por suerte no deje que se perdiera el dia de hoy con vos 
+                        y posta los reencuentros valen cada km que nos separa y no deje que "Todo el futuro está en la incertidumbre y viví de una vez" (otra frase de Séneca, un crack)</p>
+                    <p>TE AMO</p>
                 </div>
             </div>
             <div class="timeline-item">
